# zfp

./: .gitignore  CMakeLists.txt
cmake/: FindSYCL.cmake
cmake/Modules/: FindComputeCpp.cmake
include/: zfp.h
src/: CMakeLists.txt  zfp.c
src/cuda_zfp/: cuZFP.cu  cuZFP.h  encode1.cuh  encode2.cuh  encode3.cuh  shared.h
src/sycl_zfp/: CMakeLists.txt  README.md  constants.h  decode.hpp  decode1.hpp  decode2.hpp  decode3.hpp  encode.hpp  encode1.hpp  encode2.hpp  encode3.hpp  pointers.hpp  shared.h  syclZFP.cpp  syclZFP.h  type_info.hpp  variable.hpp
src/sycl_zfp/sycl_intrinsics/: cooperative_groups.hpp  scan.hpp
src/sycl_zfp/sycl_intrinsics/parallel_primitives/: common.h  scan.hpp  scan_cooperative.hpp
src/template/: compress.c  cudacompress.c  decompress.c  ompcompress.c  syclcompress.c  sycldecompress.c
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/array/: testArrayBase.cpp  testConstArrayBase.cpp
tests/array/array/: testArrayBase.cpp
tests/src/endtoend/: CMakeLists.txt  syclExecBase.c
tests/src/endtoend/testcases/: sycl.c
tests/src/execPolicy/: CMakeLists.txt  testSycl.c
tests/src/inline/: CMakeLists.txt
utils/: zfp.c
