add_executable(testOmp testOmp.c)
target_link_libraries(testOmp PRIVATE cmocka zfp)
add_test(NAME testOmp COMMAND testOmp)
if(ZFP_WITH_OPENMP)
    target_compile_options(testOmp PRIVATE ${OpenMP_C_FLAGS})
    target_link_libraries(testOmp PRIVATE ${OpenMP_C_LIBRARIES})
    set_property(TEST testOmp PROPERTY RUN_SERIAL TRUE)
endif()

if(ZFP_WITH_OPENMP)
  add_executable(testOmpInternal testOmpInternal.c)
  target_compile_options(testOmpInternal PRIVATE ${OpenMP_C_FLAGS})
  target_link_libraries(testOmpInternal PRIVATE
          cmocka zfp ${OpenMP_C_FLAGS} ${OpenMP_C_LIBRARIES})
  add_test(NAME testOmpInternal COMMAND testOmpInternal)
endif ()

if (ZFP_WITH_CUDA AND NOT DEFINED ZFP_OMP_TESTS_ONLY)
    add_executable(testCuda testCuda.c)
    target_link_libraries(testCuda PRIVATEcmocka zfp)
    add_test(NAME testCuda COMMAND testCuda)
endif ()

if (ZFP_WITH_SYCL AND NOT DEFINED ZFP_OMP_TESTS_ONLY)
    add_executable(testSYCL testSycl.c)
    target_link_libraries(testSYCL PRIVATE cmocka zfp)
    add_sycl_to_target(TARGET testSYCL)
  add_test(NAME testSYCL COMMAND testSYCL)
endif ()
